--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "multer": "^1.4.4"
-  }
+  },
+  "proxy" : "http://localhost:4000"
+
 }
